<resources>
    <string name="app_name" translatable="false">EBanking</string>
    <string name="title_activity_deneme" translatable="false">deneme</string>
    <string name="tab_text_1" translatable="false">Tab 1</string>
    <string name="tab_text_2" translatable="false">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_profile" translatable="false">Profile</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_bank_account" translatable="false">activity_bank_account</string>


    <string name="title_add_bank_btn">Thêm tài khoản ngân hàng</string>
    <string name="title_add_saving_btn">Thêm tài khoản tiết kiệm</string>
    <string name="title_saving_details">GỬI TIỀN</string>
    <string name="label_choose_saving_type">Chọn loại tiết kiệm</string>
    <string name="label_term_months">Tháng cần gửi</string>
    <string name="label_min_balance">Tiền cần gửi</string>
    <string name="label_interest_rate">Lãi suất (tháng)</string>
    <string name="label_edt_saving_account">Số tài khoản</string>
    <string name="label_notify_empty_bank_account">Nếu để trống, hệ thống sẽ tự tạo</string>
    <string name="label_edt_term_months">Thời gian gửi (tháng)</string>
    <string name="label_edt_saving_amount">Số tiền gửi</string>
    <string name="label_from_account">Từ tài khoản</string>
    <string name="label_save_money_btn">GỬI TIỀN</string>
    <string name="title_bank_accouns">Tài khoản</string>
    <string name="label_balance">Tổng tài sản</string>
    <string name="label_bank_accounts_btn">Chuyển tiền</string>
    <string name="label_saving_accounts_btn">Tiết kiệm</string>
    <string name="notify_no_bank_accounts">Không có tài khoản ngân hàng</string>
    <string name="label_bill_id">Mã hóa đơn</string>
    <string name="label_bill_amount">Số tiền</string>
    <string name="label_bill_date">Thời gian</string>
    <string name="label_pay_bill_btn">Chuyển tiền</string>
    <string name="label_choose_bill_type">Chọn loại hóa đơn</string>
    <string name="label_choose_bill_provider">Chọn tên nhà cung cấp</string>
    <string name="label_edt_bill_id">Nhập mã hóa đơn</string>
    <string name="btn_find">Tìm</string>
    <string name="label_old_password">Mật khẩu cũ</string>
    <string name="label_edt_old_password">Nhập mật khẩu cũ</string>
    <string name="label_new_pasword">Mật khẩu mới</string>
    <string name="label_edt_new_password">Nhập mật khẩu mới</string>
    <string name="label_confirm_new_password">Nhập lại mật khẩu mới</string>
    <string name="label_btn_change_password">Đổi mật khẩu</string>
    <string name="title_personal_infos">THÔNG TIN CÁ NHÂN</string>
    <string name="label_personal_name">Họ tên</string>
    <string name="label_edt_personal_name">Nhập họ tên</string>
    <string name="label_personal_id_number">Số căn cước công dân</string>
    <string name="label_edt_personal_id_number">Nhập số căn cước công dân</string>
    <string name="label_personal_phone">Số điện thoại</string>
    <string name="label_edt_personal_phone">Nhập số điện thoại</string>
    <string name="label_personal_email">Email</string>
    <string name="label_edt_personal_email">Nhập email</string>
    <string name="btn_update">Cập nhật</string>
    <string name="btn_log_out">Đăng xuất</string>
    <string name="btn_pay_bills">Thanh toán hóa đơn</string>
    <string name="btn_top_up">Nạp tiền điện thoại</string>
    <string name="title_services">Dịch vụ</string>
    <string name="label_username">Tài khoản</string>
    <string name="label_password">Mật khẩu</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="btn_sign_up">Đăng kí</string>
    <string name="title_sign_up">ĐĂNG KÝ</string>
    <string name="title_top_up">Nạp tiền điện thoại</string>
    <string name="label_edt_top_up_amount">Số tiền</string>
    <string name="label_edt_phone_top_up">Số điện thoại</string>
    <string name="label_choose_top_up_type">Loại nạp tiền</string>
    <string name="btn_confirm_top_up">NẠP TIỀN</string>
    <string name="title_transer">Bạn muốn chuyển khoản tới</string>
    <string name="label_edt_transfer_to_acc_number">Số tài khoản?</string>
    <string name="btn_continue">Tiếp</string>
    <string name="title_transfer_details">Chuyển trong cùng ngân hàng</string>
    <string name="label_transfer_to_account">Đến tài khoản</string>
    <string name="label_transfer_amount">Số tiền chuyển</string>
    <string name="label_edt_transfer_amount">Số tiền</string>
    <string name="label_transfer_description">Nội dung chuyển tiền</string>
    <string name="label_edt_transfer_description">Nội dung</string>
    <string name="btn_transfer">Chuyển tiền</string>
    <string name="title_transaction">Chi tiết giao dịch</string>
    <string name="label_transaction_date">Ngày:</string>
    <string name="label_transaction_description">Mô Tả:</string>
    <string name="label_transaction_from_account">Từ Tài Khoản:</string>
    <string name="label_transaction_to_account">Đến Tài Khoản:</string>
    <string name="label_transaction_to_users_name">Tên người nhận:</string>
    <string name="label_transaction_amount">Số Tiền:</string>
    <string name="btn_make_statement">Sao kê</string>
    <string name="title_OTP_verification">Xác nhận mã OTP</string>
    <string name="label_OTP_input">Xin hãy nhập mã OTP</string>
    <string name="label_resend_OTP">Chưa nhận được mã?</string>
    <string name="btn_resend_OTP">Gửi lại</string>
    <string name="btn_confirm">Xác nhận</string>
    <string name="btn_view_personal_details">Đổi thông tin cá nhân</string>
    <string name="btn_change_password">Đổi mật khẩu</string>
    <string name="btn_bank_accounts">Tài khoản</string>
    <string name="btn_services">Thanh toán</string>
    <string name="label_transactions_history">Lịch sử giao dịch</string>
    <string name="title_transactions">Danh sách giao dịch</string>
    <string name="btn_start_date_query">Ngày bắt đầu</string>
    <string name="btn_end_date_query">Ngày kết thúc</string>
    <string name="btn_query">Tìm kiếm</string>
    <string name="title_transaction_statistic">Thống kê chi tiêu</string>
    <string name="label_info_account_number">Tài khoản thanh toán</string>
    <string name="label_info_saving_account_number">Tài khoản tiết kiệm</string>
    <string name="label_info_saving_account_start_date">Thời gian gửi</string>
    <string name="label_info_saving_account_end_date">Thời gian hết hạn</string>
    <string name="label_info_saving_account_interest_rate">Lãi suất</string>
    <string name="label_info_saving_account_status">Trạng thái</string>
    <string name="label_language">Ngôn ngữ</string>
    <string name="currency">VND</string>
    <string name="warning_start_end_date_6_months">"Hãy chọn sao cho phạm vi không quá 6 tháng"</string>
    <string name="warning_start_more_than_end">Ngày bắt đầu không được sau ngày kết thúc</string>
    <string name="warning_no_start_end_date">Xin hãy chọn cả ngày bắt đầu và kết thúc</string>
    <string name="account_status_active">Còn hoạt động</string>
    <string name="account_status_non_expire">Không hết hạn</string>
    <string name="account_status_expired">Hết hạn</string>
    <string name="toast_11_number_account">Hãy nhập số tài khoản đủ 11 số</string>
    <string name="toast_no_amount">Hãy nhập lượng tiền</string>
    <string name="toast_not_enough_money">Lượng tiền lớn hơn số dư</string>
    <string name="toast_cannot_determine_interest_rate">Chưa thể xác định lãi suất</string>
    <string name="notify_cannot_determine_interest_rate">Thông tin bạn nhập hiện không có mức lãi suất phù hợp</string>
    <string name="notify_interest_rate">Lãi suất của bạn sẽ là: "</string>
    <string name="toast_field_empty">Vui lòng điền đầy đủ thông tin!</string>
    <string name="toast_retype_new_password">Mật khẩu mới không khớp!</string>
    <string name="label_electric_bill">Hóa đơn tiền điện</string>
    <string name="label_water_bill">Hóa đơn tiền nước</string>
    <string name="toast_password_length">Mật khẩu phải dài hơn 6 kí tự</string>
    <string name="label_prepaid_phone">"Nạp tiền điện thoại trả trước</string>
    <string name="label_postpaid_phone">Nạp tiền điện thoại trả sau</string>
    <string name="toast_cannnot_find">Không tìm thấy</string>
    <string name="toast_undefined_phone">Số điện thoại không đúng định dạng hoặc nhà mạng không hỗ trợ</string>
    <string name="toast_unacceptable_amount">Chỉ chấp nhận: 10000, 20000, 30000, 50000, 100000, 200000, 300000, 500000, 1000000</string>
    <string name="toast_no_bank_account_chosen">Xin hãy chọn một tài khoản để gửi</string>
    <string name="toast_username_password">Sai tên người dùng hoặc mật khẩu</string>
    <string name="toast_error">Có lỗi xảy ra!</string>
    <string name="toast_register_successful">Đăng kí thành công</string>
    <string name="toast_transaction_saved">Đã lưu vào thư viện ảnh</string>
    <string name="title_add_bank_account">Hãy nhập số tài khoản bạn muốn</string>
    <string name="notify_no_bank_account">Không tìm thấy tài khoản ngân hàng</string>
</resources>