<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_old_password"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/et_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/label_edt_old_password"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_new_pasword"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/label_edt_new_password"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_confirm_new_password"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/et_confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/label_confirm_new_password"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="40dp"/>

    <Button
        android:id="@+id/btn_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_btn_change_password"
        android:layout_marginTop="24dp"/>

</LinearLayout>
