<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_choose_bill_type"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerBillTypes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/viewHidable"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="16dp"
            android:background="@android:color/darker_gray" />

        <!-- From Account Section -->
        <TextView
            android:id="@+id/tvWaterSuppliers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_choose_bill_provider"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerWaterSuppliers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="16dp"
            android:background="@android:color/darker_gray" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_edt_bill_id"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtBillId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/label_bill_id"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_find_bill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:text="@string/btn_find"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</RelativeLayout>
