<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <!-- Title TextView -->
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_transaction_statistic"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="#7E48E5"
        android:paddingHorizontal="0dp"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"/>

    <!-- Row for Date Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp">

        <!-- Start Date Button -->
        <Button
            android:id="@+id/btn_start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_start_date_query"
            android:layout_gravity="center" />

        <!-- Space between buttons -->
        <View
            android:layout_width="16dp"
            android:layout_height="0dp" />

        <!-- End Date Button -->
        <Button
            android:id="@+id/btn_end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_end_date_query"
            android:layout_gravity="center" />
    </LinearLayout>

    <!-- Query Button -->
    <Button
        android:id="@+id/btn_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_query"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="16dp"/>

    <!-- Graph Space -->
    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:visibility="gone"/>
</LinearLayout>
