<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/btn_back_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/back_to_home_button"/>

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_back_home"

        android:layout_marginTop="32dp"
        android:text="@string/title_transer"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/account_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_text"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/bank_logo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_logo" />

        <TextView
            android:id="@+id/bank_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ebanking - EBK"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="30sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/account_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_container"
        android:layout_marginTop="16dp"
        android:hint="@string/label_edt_transfer_to_acc_number"
        android:background="@null"
        android:inputType="number"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/tvNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_number_input"
        android:layout_marginTop="5dp"
        android:textColor="#AFB1B3"
        android:text="@string/notify_no_bank_accounts"
        android:visibility="gone"
        android:textSize="15sp"/>
    <Button
        android:id="@+id/btn_continue_transfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:text="@string/btn_continue"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</RelativeLayout>
